--- a/page.html
+++ b/page.html
@@ -9,3 +9,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&display=swap" rel="stylesheet">
 </head>
+
+<body>
+    <header>
+        <nav>
+            <img src="images/logo/Booki.png">
+            <div>
+                <a href="hébergement.html">Hébergements</a>
+                <a href="activités.html">Activités</a>
+            </div>
+        </nav>
+    </header>
+</body>
