[ADD] beggin of style.css file

--- a/page.html
+++ b/page.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <nav>
+        <nav class="nav_header">
             <img src="images/logo/Booki.png">
             <div>
                 <a href="hébergement.html">Hébergements</a>
