[ADD] most modif

--- a/page.html
+++ b/page.html
@@ -8,16 +8,53 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 
 <body>
     <header>
         <nav class="nav_header">
-            <img src="images/logo/Booki.png">
+            <img class="logo" src="images/logo/Booki.png">
             <div>
                 <a href="hébergement.html">Hébergements</a>
                 <a href="activités.html">Activités</a>
             </div>
         </nav>
+        <h1>Trouvez votre hébergement pour des vacances de rêve</h1>
+        <h2>En plein centre-ville ou en pleine nature</h2>
+        <form>
+            <div class="icon">
+                <i class="fas fa-map"></i>
+            </div>
+            <input>
+            <button>
+                Rechercher
+            </button>
+        </form>
+        <div class="filtres">
+            <p class="h3_f">Filtres</p>
+            <ul>
+                <li>
+                    <i></i>
+                    <p class="p_f">Economique</p>
+                </li>
+                <li>
+                    <i></i>
+                    <p class="p_f">Familial</p>
+                </li>
+                <li>
+                    <i></i>
+                    <p class="p_f">Romantique</p>
+                </li>
+                <li>
+                    <i></i>
+                    <p class="p_f">Animaux autorisés</p>
+                </li>
+            </ul>
+        </div>
+        <div class="end_header">
+            <i></i>
+            <p>Plus de 500 logements sont disponibles dans cette ville</p>
+        </div>
     </header>
 </body>
