--- a/page.html
+++ b/page.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope&family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/2e7a3340e1.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
         <h2>En plein centre-ville ou en pleine nature</h2>
         <form>
             <div class="icon">
-                <i class="fas fa-map"></i>
+                <i class="fas fa-map-marker-alt"></i>
             </div>
             <input>
             <button>
@@ -35,25 +35,25 @@
             <p class="h3_f">Filtres</p>
             <ul>
                 <li>
-                    <i></i>
+                    <i class="fa-solid fa-money-bill-wave"></i>
                     <p class="p_f">Economique</p>
                 </li>
                 <li>
-                    <i></i>
+                    <i class="fa-solid fa-person"></i>
                     <p class="p_f">Familial</p>
                 </li>
                 <li>
-                    <i></i>
+                    <i class="fas fa-heart"></i>
                     <p class="p_f">Romantique</p>
                 </li>
                 <li>
-                    <i></i>
+                    <i class="fa-solid fa-dog"></i>
                     <p class="p_f">Animaux autorisés</p>
                 </li>
             </ul>
         </div>
         <div class="end_header">
-            <i></i>
+            <i class="fa-solid fa-info"></i>
             <p>Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
     </header>
