--- a/page.html
+++ b/page.html
@@ -54,7 +54,7 @@
         </div>
         <div class="end_header">
             <i class="fa-solid fa-info"></i>
-            <p>Plus de 500 logements sont disponibles dans cette ville</p>
+            <p class="info">Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
     </header>
 </body>
