--- a/page.html
+++ b/page.html
@@ -57,4 +57,90 @@
             <p class="info">Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
     </header>
+    <main>
+        <div class="div_heb">
+            <h1>Hébergements à Marseille</h1>
+            <ul>
+                <li class="heb">
+                    <img class="hebergement" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
+                    <h2 class="h2_heb">Auberge La Canebière</h2>
+                    <h3 class="h3_heb">Nuit à partir de 25€</h3>
+                    <i></i>
+                </li>
+                <li class="heb">
+                    <img class="hebergement" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
+                    <h2 class="h2_heb">Hôtel du Port</h2>
+                    <h3 class="h3_heb">Nuit à partir de 52€</h3>
+                    <i></i>
+                </li>
+                <li class="heb">
+                    <img class="hebergement" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg">
+                    <h2 class="h2_heb">Hôtel Les mouettes</h2>
+                    <h3 class="h3_heb">Nuit à partir de 76€</h3>
+                    <i></i>
+                </li>
+                <li class="heb">
+                    <img class="hebergement" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
+                    <h2 class="h2_heb">Hôtel de la mer</h2>
+                    <h3 class="h3_heb">Nuit à partir de 45€</h3>
+                    <i></i>
+                </li>
+                <li class="heb">
+                    <img class="hebergement" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
+                    <h2 class="h2_heb">Auberge Le Panier</h2>
+                    <h3 class="h3_heb">Nuit à partir de 23€</h3>
+                    <i></i>
+                </li>
+                <li class="heb">
+                    <img class="hebergement" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
+                    <h2 class="h2_heb">Hôtel Chez Amina</h2>
+                    <h3 class="h3_heb">Nuit à partir de 96€</h3>
+                    <i></i>
+                </li>
+            </ul>
+        </div>
+        <div class="div_heb">
+            <h1>Les plus populaires</h1>
+            <i></i>
+            <ul>
+                <li>
+                    <img class="pop" src="images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
+                    <h2>Hôtel Le soleil du matin</h2>
+                    <h3>Nuit à partir de 126€</h3>
+                    <i></i>
+                </li>
+                <li>
+                    <img class="pop" src="images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
+                    <h2>Chambres d'hôtes Au coeur de l'eau</h2>
+                    <h3>Nuit à partir de 71€</h3>
+                    <i></i>
+                </li>
+                <li>
+                    <img class="pop" src="images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg">
+                    <h2>Hôtel Bleu et Blanc</h2>
+                    <h3>Nuit à partir de 68€</h3>
+                    <i></i>
+                </li>
+            </ul>
+        </div>
+        <h1>Activités à Marseille</h1>
+        <ul>
+            <li>
+                <img>
+                <h2>Vieux-Port</h2>
+            </li>
+            <li>
+                <img>
+                <h2>Fort de Pomègues</h2>
+            </li>
+            <li>
+                <img>
+                <h2>Parc national des Calanques</h2>
+            </li>
+            <li>
+                <img>
+                <h2>Notre-Dame-de-la-Garde</h2>
+            </li>
+        </ul>
+    </main>
 </body>
