[ADD] better mise en page

--- a/index.html
+++ b/index.html
@@ -60,44 +60,80 @@
     <main>
         <div class="div_heb">
             <h1>Hébergements à Marseille</h1>
-            <ul>
+            <ul class="carte">
                 <li class="heb">
                     <img class="hebergement" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
-                    <h2 class="h2_heb">Auberge La Canebière</h2>
-                    <h3 class="h3_heb">Nuit à partir de 25€</h3>
-                    <i></i>
+                    <div class="écrit_carte">
+                        <h2 class="h2_heb">Auberge La Canebière</h2>
+                        <h3 class="h3_heb">Nuit à partir de 25€</h3>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="grey_star fa-solid fa-star"></i>
+                    </div>
                 </li>
                 <li class="heb">
                     <img class="hebergement" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
-                    <h2 class="h2_heb">Hôtel du Port</h2>
-                    <h3 class="h3_heb">Nuit à partir de 52€</h3>
-                    <i></i>
+                    <div class="écrit_carte">
+                        <h2 class="h2_heb">Hôtel du Port</h2>
+                        <h3 class="h3_heb">Nuit à partir de 52€</h3>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="grey_star fa-solid fa-star"></i>
+                    </div>
                 </li>
                 <li class="heb">
                     <img class="hebergement" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg">
-                    <h2 class="h2_heb">Hôtel Les mouettes</h2>
-                    <h3 class="h3_heb">Nuit à partir de 76€</h3>
-                    <i></i>
+                    <div class="écrit_carte">
+                        <h2 class="h2_heb">Hôtel Les mouettes</h2>
+                        <h3 class="h3_heb">Nuit à partir de 76€</h3>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="grey_star fa-solid fa-star"></i>
+                    </div>
                 </li>
                 <li class="heb">
                     <img class="hebergement" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
-                    <h2 class="h2_heb">Hôtel de la mer</h2>
-                    <h3 class="h3_heb">Nuit à partir de 45€</h3>
-                    <i></i>
+                    <div class="écrit_carte">
+                        <h2 class="h2_heb">Hôtel de la mer</h2>
+                        <h3 class="h3_heb">Nuit à partir de 45€</h3>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="grey_star fa-solid fa-star"></i>
+                    </div>
                 </li>
                 <li class="heb">
                     <img class="hebergement" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
-                    <h2 class="h2_heb">Auberge Le Panier</h2>
-                    <h3 class="h3_heb">Nuit à partir de 23€</h3>
-                    <i></i>
+                    <div class="écrit_carte">
+                        <h2 class="h2_heb">Auberge Le Panier</h2>
+                        <h3 class="h3_heb">Nuit à partir de 23€</h3>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="grey_star fa-solid fa-star"></i>
+                    </div>
                 </li>
                 <li class="heb">
                     <img class="hebergement" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
-                    <h2 class="h2_heb">Hôtel Chez Amina</h2>
-                    <h3 class="h3_heb">Nuit à partir de 96€</h3>
-                    <i></i>
+                    <div class="écrit_carte">
+                        <h2 class="h2_heb">Hôtel Chez Amina</h2>
+                        <h3 class="h3_heb">Nuit à partir de 96€</h3>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="grey_star fa-solid fa-star"></i>
+                    </div>
                 </li>
-            </ul>
+            </div>
         </div>
         <div class="div_heb">
             <h1>Les plus populaires</h1>
