[ADD] modif in main

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </form>
         <div class="filtres">
             <p class="h3_f">Filtres</p>
-            <ul>
+            <ul class="fil">
                 <li>
                     <i class="fa-solid fa-money-bill-wave"></i>
                     <p class="p_f">Economique</p>
@@ -58,106 +58,132 @@
         </div>
     </header>
     <main>
-        <div class="div_heb">
-            <h1>Hébergements à Marseille</h1>
-            <ul class="carte">
-                <li class="heb">
-                    <img class="hebergement" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
-                    <div class="écrit_carte">
-                        <h2 class="h2_heb">Auberge La Canebière</h2>
-                        <h3 class="h3_heb">Nuit à partir de 25€</h3>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="grey_star fa-solid fa-star"></i>
-                    </div>
-                </li>
-                <li class="heb">
-                    <img class="hebergement" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
-                    <div class="écrit_carte">
-                        <h2 class="h2_heb">Hôtel du Port</h2>
-                        <h3 class="h3_heb">Nuit à partir de 52€</h3>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="grey_star fa-solid fa-star"></i>
-                    </div>
-                </li>
-                <li class="heb">
-                    <img class="hebergement" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg">
-                    <div class="écrit_carte">
-                        <h2 class="h2_heb">Hôtel Les mouettes</h2>
-                        <h3 class="h3_heb">Nuit à partir de 76€</h3>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="grey_star fa-solid fa-star"></i>
-                    </div>
-                </li>
-                <li class="heb">
-                    <img class="hebergement" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
-                    <div class="écrit_carte">
-                        <h2 class="h2_heb">Hôtel de la mer</h2>
-                        <h3 class="h3_heb">Nuit à partir de 45€</h3>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="grey_star fa-solid fa-star"></i>
-                    </div>
-                </li>
-                <li class="heb">
-                    <img class="hebergement" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
-                    <div class="écrit_carte">
-                        <h2 class="h2_heb">Auberge Le Panier</h2>
-                        <h3 class="h3_heb">Nuit à partir de 23€</h3>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="grey_star fa-solid fa-star"></i>
-                    </div>
-                </li>
-                <li class="heb">
-                    <img class="hebergement" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
-                    <div class="écrit_carte">
-                        <h2 class="h2_heb">Hôtel Chez Amina</h2>
-                        <h3 class="h3_heb">Nuit à partir de 96€</h3>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="grey_star fa-solid fa-star"></i>
-                    </div>
-                </li>
+        <div class="div_heb_pop">
+            <div class="div_heb">
+                <h1>Hébergements à Marseille</h1>
+                <ul class="carte">
+                    <li class="heb">
+                        <img class="hebergement" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
+                        <div class="écrit_carte">
+                            <h2 class="h2_heb">Auberge La Canebière</h2>
+                            <h3 class="h3_heb">Nuit à partir de 25€</h3>
+                            <i class="first fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="grey_star fa-solid fa-star"></i>
+                        </div>
+                    </li>
+                    <li class="heb">
+                        <img class="hebergement" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
+                        <div class="écrit_carte">
+                            <h2 class="h2_heb">Hôtel du Port</h2>
+                            <h3 class="h3_heb">Nuit à partir de 52€</h3>
+                            <i class="first fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="grey_star fa-solid fa-star"></i>
+                        </div>
+                    </li>
+                    <li class="heb">
+                        <img class="hebergement" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg">
+                        <div class="écrit_carte">
+                            <h2 class="h2_heb">Hôtel Les mouettes</h2>
+                            <h3 class="h3_heb">Nuit à partir de 76€</h3>
+                            <i class="first fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="grey_star fa-solid fa-star"></i>
+                        </div>
+                    </li>
+                    <li class="heb">
+                        <img class="hebergement" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg">
+                        <div class="écrit_carte">
+                            <h2 class="h2_heb">Hôtel de la mer</h2>
+                            <h3 class="h3_heb">Nuit à partir de 45€</h3>
+                            <i class="first fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="grey_star fa-solid fa-star"></i>
+                        </div>
+                    </li>
+                    <li class="heb">
+                        <img class="hebergement" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg">
+                        <div class="écrit_carte">
+                            <h2 class="h2_heb">Auberge Le Panier</h2>
+                            <h3 class="h3_heb">Nuit à partir de 23€</h3>
+                            <i class="first fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="grey_star fa-solid fa-star"></i>
+                        </div>
+                    </li>
+                    <li class="heb">
+                        <img class="hebergement" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg">
+                        <div class="écrit_carte">
+                            <h2 class="h2_heb">Hôtel Chez Amina</h2>
+                            <h3 class="h3_heb">Nuit à partir de 96€</h3>
+                            <i class="first fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="fa-solid fa-star"></i>
+                            <i class="grey_star fa-solid fa-star"></i>
+                        </div>
+                    </li>
+                </div>
             </div>
-        </div>
-        <div class="div_heb">
-            <h1>Les plus populaires</h1>
-            <i></i>
-            <ul>
-                <li>
-                    <img class="pop" src="images/hebergements/3_medium/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
-                    <h2>Hôtel Le soleil du matin</h2>
-                    <h3>Nuit à partir de 126€</h3>
-                    <i></i>
-                </li>
-                <li>
-                    <img class="pop" src="images/hebergements/3_medium/fred-kleber-gTbaxaVLvsg-unsplash.jpg">
-                    <h2>Chambres d'hôtes Au coeur de l'eau</h2>
-                    <h3>Nuit à partir de 71€</h3>
-                    <i></i>
-                </li>
-                <li>
-                    <img class="pop" src="images/hebergements/2_large/reisetopia-B8WIgxA_PFU-unsplash.jpg">
-                    <h2>Hôtel Bleu et Blanc</h2>
-                    <h3>Nuit à partir de 68€</h3>
-                    <i></i>
-                </li>
-            </ul>
+            <div class="div_pop">
+                <h1>Les plus populaires</h1>
+                <i></i>
+                <ul class="carte_pop">
+                    <li class="li_pop">
+                        <img class="pop" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
+                        <div class="content">
+                            <h2 class="h2_pop">Hôtel Le soleil du matin</h2>
+                            <h3 class="h3_pop">Nuit à partir de 126€</h3>
+                            <div class="star">
+                                <i class="first fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="grey_star fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="li_pop">
+                        <img class="pop" src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg">
+                        <div class="content">
+                            <h2 class="h2_pop">Chambres d'hôtes Au coeur de l'eau</h2>
+                            <h3 class="h3_pop">Nuit à partir de 71€</h3>
+                            <div class="star">
+                                <i class="first fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="grey_star fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="li_pop">
+                        <img class="pop" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg">
+                        <div class="content">
+                            <h2 class="h2_pop">Hôtel Bleu et Blanc</h2>
+                            <h3 class="h3_pop">Nuit à partir de 68€</h3>
+                            <div class="star">
+                                <i class="first fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star"></i>
+                                <i class="grey_star fa-solid fa-star"></i>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
         <h1>Activités à Marseille</h1>
         <ul>
