[ADD] main and beggin of footer

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
         <div class="filtres">
             <p class="h3_f">Filtres</p>
             <ul class="fil">
-                <li>
+                <li class="li_fil">
                     <i class="fa-solid fa-money-bill-wave"></i>
                     <p class="p_f">Economique</p>
                 </li>
-                <li>
+                <li class="li_fil">
                     <i class="fa-solid fa-person"></i>
                     <p class="p_f">Familial</p>
                 </li>
-                <li>
+                <li class="li_fil">
                     <i class="fas fa-heart"></i>
                     <p class="p_f">Romantique</p>
                 </li>
-                <li>
+                <li class="li_fil">
                     <i class="fa-solid fa-dog"></i>
                     <p class="p_f">Animaux autorisés</p>
                 </li>
@@ -134,7 +134,8 @@
                             <i class="grey_star fa-solid fa-star"></i>
                         </div>
                     </li>
-                </div>
+                    <h3>Afficher plus</h3>
+                </ul>
             </div>
             <div class="div_pop">
                 <h1>Les plus populaires</h1>
@@ -185,24 +186,46 @@
                 </ul>
             </div>
         </div>
-        <h1>Activités à Marseille</h1>
-        <ul>
-            <li>
-                <img>
-                <h2>Vieux-Port</h2>
-            </li>
-            <li>
-                <img>
-                <h2>Fort de Pomègues</h2>
-            </li>
-            <li>
-                <img>
-                <h2>Parc national des Calanques</h2>
-            </li>
-            <li>
-                <img>
-                <h2>Notre-Dame-de-la-Garde</h2>
-            </li>
-        </ul>
+        <section>
+            <h1>Activités à Marseille</h1>
+            <ul class="act">
+                <li class="li_act">
+                    <img class="img_act" src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
+                    <h2 class="h2_act">Vieux-Port</h2>
+                </li>
+                <li class="li_act">
+                    <img class="img_act" src="images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg">
+                    <h2 class="h2_act">Fort de Pomègues</h2>
+                </li>
+                <li class="li_act">
+                    <img class="img_act" src="images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg">
+                    <h2 class="h2_act">Parc national des Calanques</h2>
+                </li>
+                <li class="li_act">
+                    <img class="img_act" src="images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg">
+                    <h2 class="h2_act">Notre-Dame-de-la-Garde</h2>
+                </li>
+            </ul>
+        </section>
     </main>
+    <footer>
+        <div class="div_foot">
+            <div class="content_foot">
+                <h2>A propos</h2>
+                <h3>Fonctionnement du site</h3>
+                <h3>Condition générales</h3>
+                <h3>Données et confidentialité</h3>
+            </div>
+            <div class="content_foot">
+                <h2>Nos hébergements</h2>
+                <h3>Charte qualité</h3>
+                <h3>Proposer votre hôtel</h3>
+            </div>
+            <div class="content_foot">
+                <h2>Assistance</h2>
+                <h3>Centre d'aide</h3>
+                <h3>Nous contacter</h3>
+            </div>
+        </div>
+    </footer>
 </body>
