--- a/index.html
+++ b/index.html
@@ -211,20 +211,20 @@
     <footer>
         <div class="div_foot">
             <div class="content_foot">
-                <h2>A propos</h2>
-                <h3>Fonctionnement du site</h3>
-                <h3>Condition générales</h3>
-                <h3>Données et confidentialité</h3>
+                <h2 class="h2_foot">A propos</h2>
+                <h3 class="h3_foot">Fonctionnement du site</h3>
+                <h3 class="h3_foot">Condition générales</h3>
+                <h3 class="h3_foot">Données et confidentialité</h3>
             </div>
             <div class="content_foot">
-                <h2>Nos hébergements</h2>
-                <h3>Charte qualité</h3>
-                <h3>Proposer votre hôtel</h3>
+                <h2 class="h2_foot">Nos hébergements</h2>
+                <h3 class="h3_foot">Charte qualité</h3>
+                <h3 class="h3_foot">Proposer votre hôtel</h3>
             </div>
             <div class="content_foot">
-                <h2>Assistance</h2>
-                <h3>Centre d'aide</h3>
-                <h3>Nous contacter</h3>
+                <h2 class="h2_foot">Assistance</h2>
+                <h3 class="h3_foot">Centre d'aide</h3>
+                <h3 class="h3_foot">Nous contacter</h3>
             </div>
         </div>
     </footer>
