[ADD] icon in popular class

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <main>
         <div class="div_heb_pop">
             <div class="div_heb">
-                <h1>Hébergements à Marseille</h1>
+                <h1 class="title">Hébergements à Marseille</h1>
                 <ul class="carte">
                     <li class="heb">
                         <img class="hebergement" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg">
@@ -138,8 +138,10 @@
                 </ul>
             </div>
             <div class="div_pop">
-                <h1>Les plus populaires</h1>
-                <i></i>
+                <div class="div_title">
+                    <h1 class="title">Les plus populaires</h1>
+                    <i class="fa-solid fa-chart-line"></i>
+                </div>
                 <ul class="carte_pop">
                     <li class="li_pop">
                         <img class="pop" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg">
@@ -187,7 +189,7 @@
             </div>
         </div>
         <section>
-            <h1>Activités à Marseille</h1>
+            <h1 class="title">Activités à Marseille</h1>
             <ul class="act">
                 <li class="li_act">
                     <img class="img_act" src="images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg">
